--- a/pom.xml
+++ b/pom.xml
@@ -26,18 +26,15 @@
         <mapstruct.version>1.6.3</mapstruct.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
 
-        <!-- Maven plugins nad supporting properties -->
+        <!-- Maven plugins and supporting properties -->
         <jacoco.version>0.8.12</jacoco.version>
-        <maven.antrun-plugin.version>3.1.0</maven.antrun-plugin.version>
         <maven.build-helper-plugin.version>3.6.0</maven.build-helper-plugin.version>
-        <maven.changes-plugin.version>3.0.0-M2</maven.changes-plugin.version>
         <maven.checkstyle-plugin.version>3.6.0</maven.checkstyle-plugin.version>
         <maven.clean-plugin.version>3.4.0</maven.clean-plugin.version>
         <maven.compiler-plugin.version>3.13.0</maven.compiler-plugin.version>
         <maven.compiler.release>11</maven.compiler.release>
         <maven.dependency-plugin.version>3.8.1</maven.dependency-plugin.version>
         <maven.deploy-plugin.version>3.1.3</maven.deploy-plugin.version>
-        <maven.directory-maven-plugin.version>1.0</maven.directory-maven-plugin.version>
         <maven.enforcer-plugin.version>3.5.0</maven.enforcer-plugin.version>
         <maven.exec-plugin.version>3.5.0</maven.exec-plugin.version>
         <maven.install-plugin.version>3.1.3</maven.install-plugin.version>
@@ -46,9 +43,7 @@
         <maven.javadoc-plugin.version>3.11.2</maven.javadoc-plugin.version>
         <maven.jxr-plugin.version>3.6.0</maven.jxr-plugin.version>
         <maven.license-plugin.version>2.5.0</maven.license-plugin.version>
-        <!-- TODO Upgrade to 3.26.0+ once we move to PMD 7.8.0+ -->
         <maven.openapi-generator-plugin.version>7.11.0</maven.openapi-generator-plugin.version>
-        <maven.pmd-plugin.version>3.21.2</maven.pmd-plugin.version>
         <maven.project-info-reports-plugin.version>3.8.0</maven.project-info-reports-plugin.version>
         <maven.rat-plugin.version>0.16.1</maven.rat-plugin.version>
         <maven.release-plugin.version>3.1.1</maven.release-plugin.version>
@@ -59,11 +54,14 @@
         <maven.surefire-plugin.version>3.5.2</maven.surefire-plugin.version>
         <maven.version>3.9.9</maven.version>
         <maven.versions-plugin.version>2.18.0</maven.versions-plugin.version>
-        <mutability.detector.version>0.9.1</mutability.detector.version>
 
         <!-- Docker -->
         <docker.jib-maven-plugin.version>3.4.4</docker.jib-maven-plugin.version>
         <docker.image.prefix>springcommunity</docker.image.prefix>
+
+        <!-- SonarQube configuration -->
+        <sonar.organization>spring-petclinic-rest</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
     </properties>
 
@@ -195,53 +193,6 @@
     <reporting>
         <plugins>
             <plugin>
-                <groupId>com.github.spotbugs</groupId>
-                <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>${maven.spotbugs-plugin.version}</version>
-                <configuration>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.mutabilitydetector</groupId>
-                            <artifactId>MutabilityDetector4FindBugs</artifactId>
-                            <version>${mutability.detector.version}</version>
-                        </plugin>
-                    </plugins>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-changes-plugin</artifactId>
-                <version>${maven.changes-plugin.version}</version>
-                <!-- TODO This configuration is only if we want to produce GitHub published reports -->
-                <configuration>
-                    <!-- This value should match what is in your settings.xml for the server -->
-                    <githubAPIServerId>github</githubAPIServerId>
-                    <includeOpenIssues>false</includeOpenIssues>
-                    <onlyCurrentVersion>false</onlyCurrentVersion>
-                </configuration>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>changes</report>
-                            <!-- TODO Only if reporting off GitHub directly -->
-                            <!-- <report>github-changes</report> -->
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>${maven.checkstyle-plugin.version}</version>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>checkstyle</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
             </plugin>
@@ -249,18 +200,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jxr-plugin</artifactId>
                 <version>${maven.jxr-plugin.version}</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>${maven.pmd-plugin.version}</version>
-                <configuration>
-                    <targetJdk>${maven.compiler.release}</targetJdk>
-                    <rulesets>
-                        <!-- A rule set, that comes bundled with PMD -->
-                        <ruleset>pmd-ruleset.xml</ruleset>
-                    </rulesets>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
