--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <maven.checkstyle-plugin.version>3.6.0</maven.checkstyle-plugin.version>
         <maven.clean-plugin.version>3.4.0</maven.clean-plugin.version>
         <maven.compiler-plugin.version>3.13.0</maven.compiler-plugin.version>
-        <maven.compiler.release>17</maven.compiler.release>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
         <maven.dependency-plugin.version>3.8.1</maven.dependency-plugin.version>
         <maven.deploy-plugin.version>3.1.3</maven.deploy-plugin.version>
         <maven.enforcer-plugin.version>3.5.0</maven.enforcer-plugin.version>
