--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,9 @@ spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 spring.messages.basename=messages/messages
 spring.jpa.open-in-view=false
 
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
 logging.level.org.springframework=INFO
 #logging.level.org.springframework=DEBUG
 
