--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
 
         <!-- Data stores and supporting libs -->
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <scope>runtime</scope>
