Added H2 database schema and data, updated README and configuration files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@
 # When using HSQL, use: hsqldb
 # When using MySQL, use: mysql
 # When using PostgeSQL, use: postgres
+# When using H2, use: h2
 # ------------------------------------------------
 #
 # one for select repository layer
@@ -25,6 +26,7 @@ server.servlet.context-path=/petclinic/
 
 # database init, supports hsqldb, mysql and postgres too
 database=h2
+spring.sql.init.mode=always  # Ensures schema & data reload on every restart (good for local dev)
 spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
 spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 
