--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,8 @@ server.servlet.context-path=/petclinic/
 
 # database init, supports hsqldb, mysql and postgres too
 database=h2
-spring.sql.init.mode=always  # Ensures schema & data reload on every restart (good for local dev)
+# Ensures schema & data reload on every restart (good for local dev)
+spring.sql.init.mode=always  
 spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
 spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 
