--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@
 # When using HSQL, use: hsqldb
 # When using MySQL, use: mysql
 # When using PostgeSQL, use: postgres
+# When using H2, use: h2
 # ------------------------------------------------
 #
 # one for select repository layer
@@ -16,18 +17,19 @@
 # When using Spring Data JPA, use: spring-data-jpa
 # ------------------------------------------------
 
-spring.profiles.active=hsqldb,spring-data-jpa
+spring.profiles.active=h2,spring-data-jpa
 
 # ------------------------------------------------
 
 server.port=9966
 server.servlet.context-path=/petclinic/
 
-# database init, supports mysql and postgres too
-database=hsqldb
+# database init, supports hsqldb, mysql and postgres too
+database=h2
+# Ensures schema & data reload on every restart (good for local dev)
+spring.sql.init.mode=always  
 spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
 spring.sql.init.data-locations=classpath*:db/${database}/data.sql
-
 
 spring.messages.basename=messages/messages
 spring.jpa.open-in-view=false
