--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@
 # When using Spring Data JPA, use: spring-data-jpa
 # ------------------------------------------------
 
-spring.profiles.active=h2,spring-data-jpa
+spring.profiles.active=postgres,spring-data-jpa
 
 # ------------------------------------------------
 
@@ -25,7 +25,7 @@ server.port=9966
 server.servlet.context-path=/petclinic/
 
 # database init, supports hsqldb, mysql and postgres too
-database=h2
+database=postgres
 # Ensures schema & data reload on every restart (good for local dev)
 spring.sql.init.mode=always  
 spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
