--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,13 @@
 services:
-  mysql:
-    image: mysql:8.4
-    command: --mysql-native-password=ON
-    ports:
-      - "3306:3306"
-    environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_ALLOW_EMPTY_PASSWORD=true
-      - MYSQL_USER=petclinic
-      - MYSQL_PASSWORD=petclinic
-      - MYSQL_DATABASE=petclinic
-    volumes:
-      - "./conf.d:/etc/mysql/conf.d:ro"
-    profiles:
-      - mysql
   postgres:
-    image: postgres:16.3
+    image: ffijuljani1/postgres
+    container_name: postgres
+    volumes:
+      - ./usr/src/app
     ports:
       - "5432:5432"
-    environment:
-      - POSTGRES_PASSWORD=petclinic
-      - POSTGRES_USER=petclinic
-      - POSTGRES_DB=petclinic
-    profiles:
-      - postgres
+    networks:
+      - petclinic-network
+  petclinicbe:
+    image: ffijuljani1/petclinicbe
+    container_name: petclinicbe
