--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: ffijuljani1/postgres
     container_name: postgres
     volumes:
-      - ~/postgres-data:/var/lib/postgresql/data
+      - petclinic-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     networks:
@@ -33,3 +33,6 @@ networks:
   petclinic-network:
     name: petclinic-network
     driver: bridge
+
+volumes:
+  petclinic-data:
