Added basic logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,7 @@ spring.jpa.open-in-view=false
 #springdoc.swagger-ui.enabled=true
 
 logging.level.org.springframework=INFO
+logging.file.name=/app/logs/app.log
 #logging.level.org.springframework=DEBUG
 
 #logging.level.org.hibernate.SQL=DEBUG
