--- a/.github/workflows/maven-build-pull-request.yml
+++ b/.github/workflows/maven-build-pull-request.yml
@@ -21,3 +21,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: ./mvnw -B verify
+
+    - name: Test
+      run: ./mvnw test
