Delete ci.yml file and add test job inside maven-build-pull-request.yml

--- a/.github/workflows/maven-build-pull-request.yml
+++ b/.github/workflows/maven-build-pull-request.yml
@@ -6,9 +6,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
@@ -22,5 +20,17 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: ./mvnw -B verify
 
-    - name: Test
-      run: ./mvnw test
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Run Unit Test
+        run: ./mvnw test
+
