--- a/.github/workflows/maven-build-pull-request.yml
+++ b/.github/workflows/maven-build-pull-request.yml
@@ -25,6 +25,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
       - name: Run Unit Test
         run: ./mvnw test
 
