fix: changing push branch for tests

--- a/.github/workflows/newman-pipeline.yml
+++ b/.github/workflows/newman-pipeline.yml
@@ -1,9 +1,11 @@
 name: Newman CI Pipeline
   
 on:
+  workflow_dispatch:
+  pull_request:
+    types: [opened, synchronize, reopened]
   push:
-    branches:
-        - integrateNewmanCI
+    branches: [NewmanCI]
 
 jobs:
   newman-tests:
