--- a/.github/workflows/newman-pipeline.yml
+++ b/.github/workflows/newman-pipeline.yml
@@ -42,6 +42,7 @@ jobs:
           bash postman-tests.sh 
 
       - name: Upload Newman HTML Report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: newman-html-reports
