--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,8 @@ logging.level.org.springframework=INFO
 # by default the authentication is disabled
 petclinic.security.enable=false
 
+# Cache configuration
+spring.cache.type=caffeine
+logging.level.org.springframework.samples.petclinic.config.CacheConfig=DEBUG
+logging.level.org.springframework.cache=DEBUG
+
