Fix database initialization when switching back to HSQLDB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 # active profiles config
 #
-# application use two active profiles
+# the application uses two active profiles
 #
 # one - for select database
 # ------------------------------------------------
 # When using HSQL, use: hsqldb
 # When using MySQL, use: mysql
-# When using PostgeSQL, use: postgres
+# When using PostgreSQL, use: postgres
 # When using H2, use: h2
 # ------------------------------------------------
 #
-# one for select repository layer
+# and one for selected repository layer
 # ------------------------------------------------
 # When using Spring jpa, use: jpa
 # When using Spring JDBC, use: jdbc
@@ -24,12 +24,12 @@ spring.profiles.active=h2,spring-data-jpa
 server.port=9966
 server.servlet.context-path=/petclinic/
 
-# database init, supports hsqldb, mysql and postgres too
-database=h2
+# Default database platform; can be overridden by other profile-specific property sources 
+spring.sql.init.platform=h2
 # Ensures schema & data reload on every restart (good for local dev)
-spring.sql.init.mode=always  
-spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
-spring.sql.init.data-locations=classpath*:db/${database}/data.sql
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath*:db/${platform}/schema.sql
+spring.sql.init.data-locations=classpath*:db/${platform}/data.sql
 
 spring.messages.basename=messages/messages
 spring.jpa.open-in-view=false
@@ -45,6 +45,6 @@ logging.level.org.springframework=INFO
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # enable the desired authentication type
-# by default the authentication is disabled
+# by default, the authentication is disabled
 petclinic.security.enable=false
 
