--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -41,3 +41,6 @@ security.ignored=/**
 basic.authentication.enabled=true
 petclinic.security.enable=true
 
+# Hybrid cache configuration
+petclinic.cache.hybrid.enabled=false
+
