Update PostgreSQL configuration and JMeter benchmarks - Config PostgreSQL in application-postgres.properties for local development. - Updated HikariCP settings for better connection pooling in application-postgres.properties. - Modified active Spring profiles in application.properties to use PostgreSQL. - Enhanced JMeter benchmark scripts by adding the 'name' field to the pet type in JSON payloads for CRUD operations.

--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -1,6 +1,16 @@
 spring.sql.init.platform=postgres
-spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost/petclinic}
-spring.datasource.username=${POSTGRES_USER:petclinic}
-spring.datasource.password=${POSTGRES_PASS:petclinic}
+spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5433/petclinic}
+spring.datasource.username=${POSTGRES_USER:postgres}
+spring.datasource.password=${POSTGRES_PASS:12345678}
 # SQL is written to be idempotent so this is safe
 spring.sql.init.mode=always
+
+# HikariCP tuning for PostgreSQL
+spring.datasource.hikari.pool-name=PetclinicHikariPool
+spring.datasource.hikari.maximum-pool-size=28
+spring.datasource.hikari.minimum-idle=8
+spring.datasource.hikari.connection-timeout=5000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.keepalive-time=300000
+spring.datasource.hikari.max-lifetime=1740000
+
