--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -14,3 +14,6 @@ spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.keepalive-time=300000
 spring.datasource.hikari.max-lifetime=1740000
 
+# Config loggging level for Hibernate
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
