--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,8 @@ logging.level.org.springframework=INFO
 # by default, the authentication is disabled
 petclinic.security.enable=false
 
+
+
+# enable spring cache with Caffeine
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=100,expireAfterWrite=5m
