--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -1,7 +1,7 @@
 spring.sql.init.platform=postgres
-spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5433/petclinic}
+spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/petclinic}
 spring.datasource.username=${POSTGRES_USER:postgres}
-spring.datasource.password=${POSTGRES_PASS:12345678}
+spring.datasource.password=${POSTGRES_PASS:123456}
 # SQL is written to be idempotent so this is safe
 spring.sql.init.mode=always
 
