changed the application.properties for init.mode to be never to allow postgres be db of choice

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@
 # When using Spring Data JPA, use: spring-data-jpa
 # ------------------------------------------------
 
-spring.profiles.active=h2,spring-data-jpa
+spring.profiles.active=postgres,spring-data-jpa
 
 # ------------------------------------------------
 
@@ -25,9 +25,9 @@ server.port=9966
 server.servlet.context-path=/petclinic/
 
 # Default database platform; can be overridden by other profile-specific property sources 
-spring.sql.init.platform=h2
+spring.sql.init.platform=postgres
 # Ensures schema & data reload on every restart (good for local dev)
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.sql.init.schema-locations=classpath*:db/${spring.sql.init.platform}/schema.sql
 spring.sql.init.data-locations=classpath*:db/${spring.sql.init.platform}/data.sql
 
