update configuration files

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <!-- Monitoring with Micrometer and Prometheus -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
         <!-- Data stores and supporting libs -->
         <dependency>
