--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,13 @@ logging.level.org.springframework=INFO
 # by default, the authentication is disabled
 petclinic.security.enable=false
 
+# Actuator endpoints configuration
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.health.show-details=always
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
+# Application info for monitoring
+info.app.name=Spring PetClinic REST
+info.app.description=REST version of Spring PetClinic
+info.app.version=@project.version@
