Add Redis caching for reference GET APIs (vets, pettypes, specialties)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,14 @@ logging.level.org.springframework=INFO
 # by default, the authentication is disabled
 petclinic.security.enable=false
 
+
+# Redis connection
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+# Cache type
+spring.cache.type=redis
+
+# Optional: disable null caching
+spring.cache.redis.cache-null-values=false
+
