--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
         <!-- Test libs -->
         <dependency>
