--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -39,5 +39,6 @@ logging.level.org.springframework=INFO
 # by default the authentication is disabled
 security.ignored=/**
 basic.authentication.enabled=true
-petclinic.security.enable=true
+spring.main.allow-circular-references=false
+petclinic.security.enable=false
 
